xidl-parser/tests/snapshots/test_union__typed_ast__union_dcl.snap
---
source: xidl-parser/tests/test-union.rs
expression: ast
---
Specification(
    [
        TypeDcl(
            TypeDcl(
                [
                    ConstrTypeDcl(
                        UnionDcl(
                            UnionForwardDcl(
                                UnionForwardDcl(
                                    Identifier(
                                        "A",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ],
            ),
        ),
        TypeDcl(
            TypeDcl(
                [
                    ConstrTypeDcl(
                        UnionDcl(
                            UnionDef(
                                UnionDef {
                                    ident: Identifier(
                                        "B",
                                    ),
                                    switch_type_spec: IntegerType(
                                        SignedInt(
                                            SignedLongInt(
                                                SignedLongInt,
                                            ),
                                        ),
                                    ),
                                    case: [],
                                },
                            ),
                        ),
                    ),
                ],
            ),
        ),
        TypeDcl(
            TypeDcl(
                [
                    ConstrTypeDcl(
                        UnionDcl(
                            UnionDef(
                                UnionDef {
                                    ident: Identifier(
                                        "C",
                                    ),
                                    switch_type_spec: IntegerType(
                                        SignedInt(
                                            SignedLongInt(
                                                SignedLongInt,
                                            ),
                                        ),
                                    ),
                                    case: [
                                        Case {
                                            label: [
                                                CaseLabel(
                                                    ConstExpr(
                                                        XorExpr(
                                                            AndExpr(
                                                                ShiftExpr(
                                                                    AddExpr(
                                                                        MultExpr(
                                                                            UnaryExpr(
                                                                                PrimaryExpr(
                                                                                    Literal(
                                                                                        IntegerLiteral(
                                                                                            DecNumber(
                                                                                                "0",
                                                                                            ),
                                                                                        ),
                                                                                    ),
                                                                                ),
                                                                            ),
                                                                        ),
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ],
                                            element: ElementSpec {
                                                ty: TypeSpec(
                                                    SimpleTypeSpec(
                                                        BaseTypeSpec(
                                                            IntegerType(
                                                                SignedInt(
                                                                    SignedLongInt(
                                                                        SignedLongInt,
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                                value: SimpleDeclarator(
                                                    SimpleDeclarator(
                                                        Identifier(
                                                            "a",
                                                        ),
                                                    ),
                                                ),
                                            },
                                        },
                                        Case {
                                            label: [
                                                CaseLabel(
                                                    ConstExpr(
                                                        XorExpr(
                                                            AndExpr(
                                                                ShiftExpr(
                                                                    AddExpr(
                                                                        MultExpr(
                                                                            UnaryExpr(
                                                                                PrimaryExpr(
                                                                                    Literal(
                                                                                        IntegerLiteral(
                                                                                            DecNumber(
                                                                                                "1",
                                                                                            ),
                                                                                        ),
                                                                                    ),
                                                                                ),
                                                                            ),
                                                                        ),
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ],
                                            element: ElementSpec {
                                                ty: TypeSpec(
                                                    TemplateTypeSpec(
                                                        StringType(
                                                            StringType {
                                                                bound: None,
                                                            },
                                                        ),
                                                    ),
                                                ),
                                                value: SimpleDeclarator(
                                                    SimpleDeclarator(
                                                        Identifier(
                                                            "b",
                                                        ),
                                                    ),
                                                ),
                                            },
                                        },
                                    ],
                                },
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ],
)
